Ingress-Mogo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mogo-express-ingress
  namespace: mern
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Specify the ingress class here
  rules:
  - host: node-express.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 8081
